--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "concurrently": "^5.2.0"
   },
   "dependencies": {
-    "google-auth-library": "^6.0.5"
+    "google-auth-library": "^6.0.5",
+    "yarn": "^1.22.10"
   }
 }
